--- a/app/src/main/res/layout/yy.xml
+++ b/app/src/main/res/layout/yy.xml
@@ -2,17 +2,19 @@
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/fragment_xx"/>
+    <FrameLayout
+        android:id="@+id/fragment_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <ListView
         android:id="@+id/lv_left_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
-         android:background="@color/white"
+        android:layout_gravity="start"
+        android:background="@color/white"
         android:divider="@null"
         android:listSelector="?attr/selectableItemBackground"/>
 
