--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,23 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     >
+    android:fitsSystemWindows="true">
 
     <FrameLayout
-        android:id="@+id/content"
+        android:id="@+id/fragment_content"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/activity_content"
-            android:layout_width="match_parent"
-
-            android:layout_height="match_parent"
-            android:background="@color/white"/>
-
-        <include
-            layout="@layout/toolbar"/>
-
-    </FrameLayout>
-
-    <ListView
-        android:id="@+id/lv_left_menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:background="@color/white"
-        android:divider="@null"
-        android:listSelector="?attr/selectableItemBackground"/>
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_menu"/>
 
 </android.support.v4.widget.DrawerLayout>
