--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -15,6 +15,8 @@
 
     <color name="shadow_white">#66C0C0C0</color>
     <color name="translucence_white">#80FFFFFF</color>
+    <color name="window_background">#FFF5F5F5</color>
+    <color name="translucence">#08000000</color>
 
     <!--白色-->
     <color name="white">#FFFFFF</color>
