--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -7,24 +8,13 @@
         <item name="colorPrimaryDark">@color/pink_base</item>
         <!--下划线 提示等一些组件的 着色-->
         <item name="colorAccent">@color/pink_base_dark</item>
+        <!--底部导航栏透明-->
+        <item name="android:windowTranslucentNavigation">true</item>
         <!--android底色-->
-        <item name="android:windowBackground">@color/window_background</item>
+        <!--<item name="android:windowBackground">@color/window_background</item>-->
 
-
-        <!-- 底部导航栏颜色 -->
-        <item name="android:navigationBarColor">@color/gray</item>
-        <!--返回键样式-->
-        <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowToggle</item>
-        <!--状态栏颜色-->
-        <item name="android:statusBarColor">@color/pink_base_dark</item>
         <!--ActionMode出现时 覆盖ActionBar-->
         <item name="windowActionModeOverlay">true</item>
-        <!--<item name="android:fitsSystemWindows">true</item>-->
-    </style>
-
-    <!--DrawerToggle配置-->
-    <style name="AppTheme.DrawerArrowToggle" parent="Base.Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@android:color/white</item>
     </style>
 
     <!--<style name="Animation" parent="@android:style/Animation">-->
@@ -44,9 +34,8 @@
 
     <!--状态栏透明 DrawerLayout-->
     <style name="MainActivityTheme" parent="AppTheme">
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <!--状态栏透明-->
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
