--- a/app/src/main/res/layout/ac_recommend_bgm.xml
+++ b/app/src/main/res/layout/ac_recommend_bgm.xml
@@ -18,11 +18,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="热门焦点"
+            android:text="番剧更新"
             android:layout_marginLeft="5dp"
             android:textColor="@color/pink_base"
             android:layout_gravity="center_vertical"
             android:textSize="18sp"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/more_shape"/>
 
     </LinearLayout>
 
@@ -34,16 +46,16 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
             android:layout_weight="1"
-            android:background="@drawable/shape"
             android:elevation="2dp"
-            android:layout_marginLeft="7dp">
+            android:background="@drawable/shape">
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="110dp"
+                android:layout_height="133dp"
                 android:scaleType="centerCrop"
-                android:id="@+id/recommend_hot_img_1"
+                android:id="@+id/recommend_bgm_img_1"
                 android:src="@drawable/aaa"/>
 
             <LinearLayout
@@ -53,28 +65,70 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
-                android:layout_below="@+id/recommend_hot_img_1">
+                android:layout_below="@+id/recommend_bgm_img_1">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:id="@+id/recommend_hot_text_1_1"
                     android:textSize="12sp"
+                    android:id="@+id/recommend_bgm_text_1_1"
+                    android:text="秒速5厘米"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_1_2"
+                    android:textSize="10sp"
+                    android:text="东法夫放大的"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:elevation="2dp"
+            android:background="@drawable/shape"
+            android:layout_marginLeft="7dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="133dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/recommend_bgm_img_2"
+                android:src="@drawable/aaa"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginLeft="5dp"
+                android:layout_below="@+id/recommend_bgm_img_2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="12sp"
+                    android:id="@+id/recommend_bgm_text_2_1"
                     android:text="秒速5厘米"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/recommend_text_1_1"
-                    android:id="@+id/recommend_hot_text_1_2"
                     android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_2_2"
                     android:textSize="10sp"
-                    android:text="东法夫放大师傅爱的方式的"/>
+                    android:text="东法夫放大的"/>
 
             </LinearLayout>
 
         </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -87,10 +141,10 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="110dp"
+                android:layout_height="133dp"
                 android:scaleType="centerCrop"
-                android:id="@+id/recommend_hot_img_2"
-                android:src="@drawable/aaa"/>
+                android:id="@+id/recommend_bgm_img_3"
+                android:src="@drawable/aaaaa"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -99,24 +153,22 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
-                android:layout_below="@+id/recommend_hot_img_2">
+                android:layout_below="@+id/recommend_bgm_img_3">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/recommend_hot_text_2_1"
                     android:layout_gravity="center_vertical"
                     android:textSize="12sp"
-                    android:text="终结的天使"/>
-
+                    android:id="@+id/recommend_bgm_text_3_1"
+                    android:text="秒速5厘米"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/recommend_hot_text_2_1"
-                    android:id="@+id/recommend_text_2_2"
                     android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_3_2"
                     android:textSize="10sp"
-                    android:text="东法夫放大师傅爱的方式的"/>
+                    android:text="东法夫放大的"/>
 
             </LinearLayout>
 
@@ -127,22 +179,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/shape"
             android:elevation="2dp"
+            android:background="@drawable/shape"
             android:layout_marginLeft="7dp">
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="110dp"
+                android:layout_height="133dp"
                 android:scaleType="centerCrop"
-                android:id="@+id/recommend_hot_img_3"
+                android:id="@+id/recommend_bgm_img_4"
                 android:src="@drawable/aaa"/>
 
             <LinearLayout
@@ -152,23 +204,23 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
-                android:layout_below="@+id/recommend_hot_img_3">
+                android:layout_below="@+id/recommend_bgm_img_4">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/recommend_hot_text_3_1"
                     android:layout_gravity="center_vertical"
                     android:textSize="12sp"
-                    android:text="环节展现"/>
+                    android:id="@+id/recommend_bgm_text_4_1"
+                    android:text="秒速5厘米"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/recommend_hot_text_3_2"
                     android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_4_2"
                     android:textSize="10sp"
-                    android:text="东法夫放大师傅爱的方式的"/>
+                    android:text="东法夫放大的"/>
 
             </LinearLayout>
 
@@ -178,16 +230,61 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:elevation="2dp"
+            android:background="@drawable/shape"
+            android:layout_marginLeft="7dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="133dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/recommend_bgm_img_5"
+                android:src="@drawable/aaaaa"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginLeft="5dp"
+                android:layout_below="@+id/recommend_bgm_img_5">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="12sp"
+                    android:id="@+id/recommend_bgm_text_5_1"
+                    android:text="秒速5厘米"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_5_2"
+                    android:textSize="10sp"
+                    android:text="东法夫放大的"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:elevation="2dp"
             android:background="@drawable/shape"
             android:layout_marginLeft="7dp"
-            android:elevation="2dp"
             android:layout_marginRight="7dp">
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="110dp"
+                android:layout_height="133dp"
                 android:scaleType="centerCrop"
-                android:id="@+id/recommend_hot_img_4"
+                android:id="@+id/recommend_bgm_img_6"
                 android:src="@drawable/aaa"/>
 
             <LinearLayout
@@ -197,23 +294,23 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
-                android:layout_below="@+id/recommend_hot_img_4">
+                android:layout_below="@+id/recommend_bgm_img_6">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/recommend_hot_text_4_1"
-                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_vertical"
                     android:textSize="12sp"
-                    android:text="哈哈哈是生死时速死"/>
+                    android:id="@+id/recommend_bgm_text_6_1"
+                    android:text="秒速5厘米"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/recommend_hot_text_4_2"
-                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/recommend_bgm_text_6_2"
                     android:textSize="10sp"
-                    android:text="东法夫放大师傅爱的方式的"/>
+                    android:text="东法夫放大的"/>
 
             </LinearLayout>
 
