--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -17,6 +17,7 @@
     <color name="translucence_white">#80FFFFFF</color>
     <color name="window_background">#FFF5F5F5</color>
     <color name="translucence">#08000000</color>
+    <color name="banner_title">#30000000</color>
 
     <!--白色-->
     <color name="white">#FFFFFF</color>
