fix ac recommend banner

--- a/app/src/main/res/layout/ac_cardview_recommend.xml
+++ b/app/src/main/res/layout/ac_cardview_recommend.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/ac_cardview_pic"
             android:layout_width="match_parent"
             android:layout_height="100dp"
