--- a/app/src/main/res/layout/yy.xml
+++ b/app/src/main/res/layout/yy.xml
@@ -1,21 +1,11 @@
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recyclerview"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:scrollbars="none">
 
-    <FrameLayout
-        android:id="@+id/fragment_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <ListView
-        android:id="@+id/lv_left_menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white"
-        android:divider="@null"
-        android:listSelector="?attr/selectableItemBackground"/>
-
-</android.support.v4.widget.DrawerLayout>
+</android.support.v7.widget.RecyclerView>
