--- a/app/src/main/res/layout/yy_1.xml
+++ b/app/src/main/res/layout/yy_1.xml
@@ -2,7 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="35dp"
+    android:layout_height="30dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_marginTop="10dp"
     android:orientation="horizontal">
 
@@ -11,9 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:text="热门焦点"
+        android:text=""
         android:textColor="@color/pink_base"
-        android:textSize="16sp"
+        android:textSize="17sp"
         android:textStyle="bold"/>
 
     <Space
@@ -22,8 +24,8 @@
         android:layout_weight="1"/>
 
     <Button
-        android:layout_width="50dp"
-        android:layout_height="35dp"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:background="@drawable/more_shape"
         android:elevation="2dp"
