--- a/app/src/main/res/layout/yy.xml
+++ b/app/src/main/res/layout/yy.xml
@@ -1,11 +1,13 @@
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/recyclerview"
+    android:id="@+id/ac_re_recycler_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="10dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:clipToPadding="false"
+    android:paddingBottom="7dp"
+    android:paddingLeft="7dp"
+    android:paddingRight="7dp"
+    android:paddingTop="7dp"
     android:scrollbars="none">
 
 </android.support.v7.widget.RecyclerView>
