--- a/app/src/main/res/layout/ac_fragment_re_cardview.xml
+++ b/app/src/main/res/layout/ac_fragment_re_cardview.xml
@@ -4,6 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
     card_view:cardCornerRadius="@dimen/shape">
 
     <LinearLayout
@@ -11,16 +12,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/ac_card_view_pic"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/ac_card_view_img"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/aaa"/>
+           />
 
         <TextView
-            android:id="@+id/ac_cardview_text1"
+            android:id="@+id/ac_card_view_tv_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -33,7 +32,7 @@
             android:textSize="12sp"/>
 
         <TextView
-            android:id="@+id/ac_cardview_text2"
+            android:id="@+id/ac_card_view_tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
