add ac partition fragment

--- a/app/src/main/res/layout/ac_activity_partition.xml
+++ b/app/src/main/res/layout/ac_activity_partition.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/ac_activity_partition_coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -19,7 +21,7 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/fragment_main_tab_layout"
+            android:id="@+id/fragment_partition_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:background="@color/pink_base"
@@ -32,7 +34,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/fragment_main_viewpager"
+        android:id="@+id/fragment_partition_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
