--- a/app/src/main/res/layout/ac_fragment_recommend_cardview.xml
+++ b/app/src/main/res/layout/ac_fragment_recommend_cardview.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
+    android:id="@+id/ac_fragment_re_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
+
     card_view:cardCornerRadius="@dimen/shape">
 
     <LinearLayout
@@ -15,8 +17,7 @@
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/ac_card_view_img"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-           />
+            android:layout_height="100dp"/>
 
         <TextView
             android:id="@+id/ac_card_view_tv_1"
