--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="pink_base">#cc669b</color>
-    <color name="pink_base_dark">#b33676</color>
+    <color name="pink_base_dark">#7A3D5D</color>
 
     <color name="blue_base">#1e88e5</color>
     <color name="blue_base_dark">#125289</color>
