--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="pink_base">#cc669b</color>
     <color name="pink_base_dark">#7A3D5D</color>
+    <color name="translucence_pink_base">#80cc669b</color>
 
     <color name="blue_base">#1e88e5</color>
     <color name="blue_base_dark">#125289</color>
