add video play activity update ac api with letv

--- a/app/src/main/res/layout/ac_recycleview_content_info_video.xml
+++ b/app/src/main/res/layout/ac_recycleview_content_info_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/ac_recycle_view_content_info_video_ll"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -7,6 +8,10 @@
     <TextView
         android:id="@+id/ac_recycle_view_content_info_video"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical"
+        android:textSize="17sp"/>
 
 </LinearLayout>
