--- a/app/src/main/res/layout/ac_fragment_content_info.xml
+++ b/app/src/main/res/layout/ac_fragment_content_info.xml
@@ -4,11 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:clipToPadding="false"
-    android:paddingBottom="7dp"
-    android:paddingLeft="7dp"
-    android:paddingRight="7dp"
-    android:paddingTop="7dp"
     android:scrollbars="none">
 
 </android.support.v7.widget.RecyclerView>
