--- a/app/src/main/res/layout/ac_recycleview_content_info_title.xml
+++ b/app/src/main/res/layout/ac_recycleview_content_info_title.xml
@@ -2,14 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:layout_margin="10dp"
               android:orientation="vertical">
 
     <TextView
         android:id="@+id/ac_recycle_view_content_info_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/ac_recycle_view_content_info_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:textSize="14sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
