--- a/app/src/main/res/layout/ac_recycleview_content_info_up.xml
+++ b/app/src/main/res/layout/ac_recycleview_content_info_up.xml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:orientation="vertical">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/ac_recycle_view_content_info_up_img"
-        android:layout_width="45dp"
-        android:layout_height="45dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/window_background"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/ac_recycle_view_content_info_up_name"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="14sp"/>
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/ac_recycle_view_content_info_up_img"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            app:roundAsCircle="true"/>
 
-        <TextView
-            android:id="@+id/ac_recycle_view_content_info_up_level"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="14sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ac_recycle_view_content_info_up_name"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textColor="@color/pink_base"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/ac_recycle_view_content_info_up_level"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/window_background"/>
 
 </LinearLayout>
