--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout android:id="@+id/video_play_content"
+             xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
-
-    <include layout="@layout/toolbar"/>
 
     <io.vov.vitamio.widget.CenterLayout
         android:layout_width="match_parent"
@@ -18,28 +17,18 @@
             android:layout_centerVertical="true"/>
     </io.vov.vitamio.widget.CenterLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-    </LinearLayout>
-
-
-
+    <ProgressBar
+        android:id="@+id/probar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:orientation="vertical">
-
-        <ProgressBar
-            android:id="@+id/probar"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/download_rate"
@@ -60,6 +49,7 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"/>
+
     </LinearLayout>
 
 
