--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,4 +9,7 @@
 
     <dimen name="tab_height">48dp</dimen>
     <dimen name="shape">2dp</dimen>
+
+    <dimen name="recycle_view_margin">8dp</dimen>
+    <dimen name="recycle_view_bottom">58dp</dimen>
 </resources>
