--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -3,8 +3,9 @@
     <style name="MDTheme" parent="AppTheme">
         <!--状态栏颜色-->
         <item name="android:statusBarColor">@color/pink_base_dark</item>
-        <!--底部导航栏透明-->
-        <item name="android:windowTranslucentNavigation">true</item>
+        <!--&lt;!&ndash;底部导航栏透明&ndash;&gt;-->
+        <!--<item name="android:windowTranslucentNavigation">true</item>-->
+        <!--<item name="android:navigationBarColor">@android:color/transparent</item>-->
 
     </style>
 
@@ -15,5 +16,9 @@
         <!--状态栏透明-->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+    <style name="fit" parent="MDTheme">
+        <item name="android:fitsSystemWindows">true</item>
+       </style>
 
 </resources>
