--- a/app/src/main/res/layout/ac_fragment_main_bangumi.xml
+++ b/app/src/main/res/layout/ac_fragment_main_bangumi.xml
@@ -4,4 +4,18 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ac_fragment_bangumi_recycler_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/recycle_view_bottom"
+        android:paddingLeft="@dimen/recycle_view_margin"
+        android:paddingRight="@dimen/recycle_view_margin"
+        android:scrollbars="none">
+
+    </android.support.v7.widget.RecyclerView>
+
+
 </LinearLayout>
