--- a/app/src/main/res/layout/ac_recycleview_cardview_content_reply.xml
+++ b/app/src/main/res/layout/ac_recycleview_cardview_content_reply.xml
@@ -55,7 +55,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/llll"
+                android:id="@+id/quote_reply_linear_layout"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -65,7 +65,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:textColor="@color/gray"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/md_blue_grey_800"
                 android:textSize="14sp"/>
 
         </LinearLayout>
