--- a/app/src/main/res/layout/ac_recycleview_cardview_vertical_with_click_info.xml
+++ b/app/src/main/res/layout/ac_recycleview_cardview_vertical_with_click_info.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:singleLine="true"
+            android:textColor="@color/font_light"
             android:textSize="12sp"/>
 
         <LinearLayout
