--- a/app/src/main/res/layout/ac_recycleview_cardview_vertical_with_subtitle.xml
+++ b/app/src/main/res/layout/ac_recycleview_cardview_vertical_with_subtitle.xml
@@ -27,6 +27,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
+            android:textColor="@color/font_light"
+
             android:gravity="center_vertical"
             android:singleLine="true"
             android:textSize="12sp"/>
