--- a/app/src/main/res/layout/ac_fragment_main_essay.xml
+++ b/app/src/main/res/layout/ac_fragment_main_essay.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ac_fragment_content_reply_recycler_view"
+        android:id="@+id/ac_fragment_essay_recycler_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/recycle_view_bottom"
         android:paddingLeft="@dimen/recycle_view_margin"
-        android:paddingRight="@dimen/recycle_view_margin"/>
+        android:paddingRight="@dimen/recycle_view_margin"
+        android:scrollbars="none"/>
 
     <ProgressBar
         android:id="@+id/pro_bar"
