--- a/app/src/main/res/layout/ac_recycleview_cardview_bangumi.xml
+++ b/app/src/main/res/layout/ac_recycleview_cardview_bangumi.xml
@@ -6,35 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
     app:cardCornerRadius="@dimen/shape">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/ac_recycle_view_bangumi_img"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal|start|top"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:roundAsCircle="true"/>
+            android:layout_height="150dp"/>
 
         <TextView
             android:id="@+id/ac_recycle_view_bangumi_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/font_blue"
-            android:textSize="14sp"/>
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:maxLines="2"
+            android:singleLine="true"
+            android:textColor="@color/font_light"
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/ac_recycle_view_bangumi_num_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:singleLine="true"
             android:textSize="12sp"/>
 
     </LinearLayout>
