--- a/app/src/main/res/layout/ac_recycleview_recommend_viewpager.xml
+++ b/app/src/main/res/layout/ac_recycleview_recommend_viewpager.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v7.widget.CardView
     android:id="@+id/ac_recommend_banner"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="170dp">
+    android:layout_height="170dp"
+    app:cardCornerRadius="@dimen/shape">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/ac_viewpager_banner"
@@ -17,4 +19,4 @@
         android:gravity="bottom|right"
         android:orientation="horizontal"/>
 
-</FrameLayout>
+</android.support.v7.widget.CardView>
