add pull down and load more

--- a/app/src/main/res/layout/ac_fragment_main_bangumi.xml
+++ b/app/src/main/res/layout/ac_fragment_main_bangumi.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/ac_fragment_bangumi_recycler_view"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_fresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/recycle_view_bottom"
-        android:paddingLeft="@dimen/recycle_view_margin"
-        android:paddingRight="@dimen/recycle_view_margin"
-        android:scrollbars="none"/>
+        android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/pro_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="120dp"
-        android:theme="@style/progressBarColor"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ac_fragment_bangumi_recycler_view"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/recycle_view_bottom"
+            android:paddingLeft="@dimen/recycle_view_margin"
+            android:paddingRight="@dimen/recycle_view_margin"
+            android:scrollbars="none"/>
 
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
