--- a/app/src/main/res/layout/ac_fragment_main_essay.xml
+++ b/app/src/main/res/layout/ac_fragment_main_essay.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_fresh_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_fresh_layout"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ac_fragment_essay_recycler_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/recycle_view_bottom"
+        android:paddingLeft="@dimen/recycle_view_margin"
+        android:paddingRight="@dimen/recycle_view_margin"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_fragment_essay_recycler_view"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingBottom="@dimen/recycle_view_bottom"
-            android:paddingLeft="@dimen/recycle_view_margin"
-            android:paddingRight="@dimen/recycle_view_margin"
-            android:scrollbars="none"/>
+</android.support.v4.widget.SwipeRefreshLayout>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-</FrameLayout>
