--- a/app/src/main/res/layout/ac_fragment_partition.xml
+++ b/app/src/main/res/layout/ac_fragment_partition.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/ac_fragment_partition_recycler_view"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_fresh_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingBottom="76dp"
-    android:paddingLeft="@dimen/recycle_view_margin"
-    android:paddingRight="@dimen/recycle_view_margin"
-    android:scrollbars="none">
+    android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ac_fragment_partition_recycler_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="76dp"
+        android:paddingLeft="@dimen/recycle_view_margin"
+        android:paddingRight="@dimen/recycle_view_margin"
+        android:scrollbars="none"/>
+
+</android.support.v4.widget.SwipeRefreshLayout>
