--- a/app/src/main/res/layout/ac_fragment_content_info.xml
+++ b/app/src/main/res/layout/ac_fragment_content_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_fresh_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,14 +17,4 @@
         android:paddingTop="@dimen/recycle_view_margin"
         android:scrollbars="none"/>
 
-    <ProgressBar
-        android:id="@+id/pro_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="120dp"
-        android:theme="@style/progressBarColor"/>
-
-
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
