--- a/app/src/main/res/values-v21/style.xml
+++ b/app/src/main/res/values-v21/style.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="MDTheme" parent="AppTheme">
+    <style name="AppTheme" parent="AppTheme">
         <!--状态栏颜色-->
         <item name="android:statusBarColor">@color/pink_base_dark</item>
         <!--&lt;!&ndash;底部导航栏透明&ndash;&gt;-->
@@ -10,14 +10,14 @@
     </style>
 
     <!--状态栏透明 DrawerLayout-->
-    <style name="TranslucentStatusTheme" parent="MDTheme">
+    <style name="TranslucentStatusTheme" parent="AppTheme">
         <!--drawablelayout覆盖在toolbar上-->
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!--状态栏透明-->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="fit" parent="MDTheme">
+    <style name="fit" parent="AppTheme">
         <item name="android:fitsSystemWindows">true</item>
        </style>
 
